@@ -37,8 +37,7 @@ PageRankVertexProgram
 
 There were two major bugs in the way in which PageRank was being calculated in `PageRankVertexProgram`. First, teleportation
 energy was not being distributed correctly amongst the vertices at each round. Second, terminal vertices (i.e. vertices
-with no outgoing edges) did not have their full gathered energy distributed via teleportation. As a secondary benefit,
-`PageRankVertexProgram` also always calculates the vertex count and no longer requires the user to specify the vertex count.
+with no outgoing edges) did not have their full gathered energy distributed via teleportation.
 
 For users upgrading, note that while the relative rank orders will remain "the same," the actual PageRank values will differ
 from prior TinkerPop versions.
@@ -64,6 +63,11 @@ Normalization preserved through computation:
 0.11375485828040575
 ==>1.00000000000000018
 ```
+
+Two other additions to `PageRankVertexProgram` were provided as well.
+
+1. It now calculates the vertex count and thus, no longer requires the user to specify the vertex count.
+2. It now allows the user to leverage an epsilon-based convergence instead of having to specify the number of iterations to execute.
 
 IO Defaults
 ^^^^^^^^^^^
